--- a/index.csr.html
+++ b/index.csr.html
@@ -9,5 +9,5 @@
 <link rel="stylesheet" href="styles-5INURTSO.css"></head>
 <body ngcm="">
   <app-root></app-root>
-<script src="main-VXUMRE6Q.js" type="module"></script></body>
+<script src="main-7Y2WNL67.js" type="module"></script></body>
 </html>
